syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "ImageService";

service ImageServices {
  rpc SaveImage(Image) returns (google.protobuf.Empty);
  rpc DownloadImage(DownloadImageRequest) returns (DownloadImageResponse);
}

message Image {
  string name = 1;
  bytes data = 2;
}

message DownloadImageRequest {
  string image_name = 1;
}

message DownloadImageResponse {
  bytes image_data = 1;
}
